[package]
name = "chainsmith"
version = "0.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
publish = false

[lib]
name = "chainsmith"
path = "src/lib.rs"

[[bin]]
name = "chainsmith"
path = "src/main.rs"

[[bin]]
name = "export_openapi"
path = "src/bin/export_openapi.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }

sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "uuid", "chrono"] }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

thiserror = "2.0.6"
anyhow = "1.0.94"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

dotenvy = "0.15.7"

utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
